# cross-android

./: .gitignore  AndroidManifest.xml.in  CMakeLists.txt  README.md  configure  makefile
assets/: assets  html
lib/: CMakeLists.txt
res/: drawable  mipmap-anydpi-v26  mipmap-hdpi  mipmap-mdpi  mipmap-xhdpi  mipmap-xxhdpi  mipmap-xxxhdpi
res/layout/: main.xml
src/cpp/: bridge-lib.cpp  bridge.cpp
src/java/com/shaidin/cross/: MainActivity.java
