cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library("${ANDROID_ABI}" SHARED)
target_include_directories("${ANDROID_ABI}" PRIVATE "../extern/core/src")
set_property(TARGET "${ANDROID_ABI}" PROPERTY CXX_STANDARD 17)
file(GLOB sources "../src/cpp/*.cpp")
target_sources("${ANDROID_ABI}" PRIVATE ${sources})
file(GLOB core_sources "../extern/core/src/*.cpp")
target_sources("${ANDROID_ABI}" PRIVATE ${core_sources})
file(GLOB main_sources "../../../src/*.cpp")
target_sources("${ANDROID_ABI}" PRIVATE ${main_sources})
install(TARGETS "${ANDROID_ABI}" DESTINATION ".")
